@@ -10,6 +10,10 @@ Version 1.3.15+svn:
       subset of WQY (just the gb2312 part is included) as requested by the
       chinese maintainer.
 
+  * Map editor
+     * The editor handles errors with the old unsupported map format more
+        graceful.
+
   * Multiplayer
     * Revised maps: The Freelands.
     * Reloaded games are displayed in yellow (instead of green) in the game
