@@ -8,6 +8,9 @@ Version 1.3.15+svn:
    * replaced the font used for the chiense translation (gkai00mp.ttf) with a
      subset of WQY (just the gb2312 part is included) as requested by the
      chinese maintainer
+ * map editor:
+   * the editor handles errors with the old unsupported map format more
+     graceful (bug #11023)
  * multiplayer:
    * revised maps: The Freelands
    * don't display 'Remote scenario' for reloaded games in the multiplayer
